--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-       <link rel = "stylesheet" href="c4_main.css">
+       <link rel = "stylesheet" href="c4_main.CSS">
        <title> HW: FormatTownHallHomePage </title> 
        <meta charset="utf-8"></meta>
     </head>
